--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="resources/styles/style.css">
     <title>Dasmoto's Arts & Crafts</title>
 </head>
 <body>
     <header>
         <h1>Dasmoto's Art & Crafts</h1>
     </header>
+    <h2>Brushes</h2>
 </body>
 </html>
