--- a/index.html
+++ b/index.html
@@ -11,6 +11,23 @@
     <header>
         <h1>Dasmoto's Art & Crafts</h1>
     </header>
-    <h2>Brushes</h2>
+    <section>
+        <h2 id="brushes">Brushes</h2>
+        <img src="./resources/images/hacksaw.jpg" alt="Pile of Hacksaw-brand brushes">
+        <h3>Hacksaw Brushes</h3>
+        <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and their ability to hold paint in large amounts. Available in different sizes. <span>Starting at $3.00 / brush</span></p>
+    </section>
+    <section>
+        <h2 id="frames">Frames</h2>
+        <img src="./resources/images/frames.jpg" alt="Many colorful art frames stacked against a wall">
+        <h3>Art frames (Assorted)</h3>
+        <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs. <span>Starting at $2.00 / frame</span></p>
+    </section>
+    <section>
+        <h2 id="paint">Frames</h2>
+        <img src="./resources/images/finnish.jpg" alt="Open tubes of Finnish-brand paint on a work surface">
+        <h3>Clean Finnish Paint</h3>
+        <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <span>Starting at $5.00 / tube</span></p>
+    </section>
 </body>
 </html>
