Add break-word on h1

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Dasmoto's Art & Crafts</h1>
+        <h1>Dasmoto's Arts & Crafts</h1>
     </header>
     <section>
         <h2 id="brushes">Brushes</h2>
