--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs. <span>Starting at $2.00 / frame</span></p>
     </section>
     <section>
-        <h2 id="paint">Frames</h2>
+        <h2 id="paint">Paint</h2>
         <img src="./resources/images/finnish.jpg" alt="Open tubes of Finnish-brand paint on a work surface">
         <h3>Clean Finnish Paint</h3>
         <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <span>Starting at $5.00 / tube</span></p>
